--- a/lesson1/index.html
+++ b/lesson1/index.html
@@ -6,12 +6,29 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- production version, optimized for size and speed -->
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
+    <style>
+    #canvas {
+        width: 300px;
+        padding: 100px 20px;
+        border: 1px solid #000;
+        text-align: center;
+        font-size: 20px;
+    }
+    </style>
     <title>VueJS Tutorial</title>
 </head>
 <body>
     <div id="app">
-        <h1>My name is {{name}} </h1>
-
+        <h1>{{greeting('Evening')}}! </h1>
+        <input type="text" placeholder="Name" v-model="name"><br/><input placeholder="job" type="text" v-model="job">
+        <p>Your Name is {{name}} working as a {{job}} </p>
+        <button v-on:click="add(5)">Add age</button>
+        <button v-on:click="subtract(5)">Subtract age</button>
+        <p>She is {{age}} old </p>
+        <p>This is a link <a v-bind:href="website" target="_blank">website</a></p>
+        <img v-bind:src="image" alt="name" width="200">
+        <p v-html="playlist"></p>
+        <div id="canvas" v-on:mousemove="updateXY"> {{x}}, {{y}} </div>
     </div>
 </body>
 <script src="../script/app.js"></script>
